# OpenLogi

./: CHANGELOG.md  Cargo.toml  README.md  README_CN.md  release-plz.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: pullfrog.yml  release-plz.yml  release.yml
crates/openlogi-agent/: Cargo.toml
crates/openlogi-agent-core/src/: bindings.rs  hook_runtime.rs  ipc.rs  orchestrator.rs
crates/openlogi-agent/src/: launch_agent.rs  main.rs  pairing.rs  server.rs  status_item.rs  tray.rs
crates/openlogi-assets/src/: http.rs  index.rs
crates/openlogi-cli/: Cargo.toml
crates/openlogi-cli/src/cmd/: list.rs
crates/openlogi-cli/src/cmd/assets/: sync.rs
crates/openlogi-cli/src/cmd/diag/: features.rs  lighting.rs  mod.rs  smartshift.rs
crates/openlogi-core/examples/: inject_action.rs
crates/openlogi-core/src/: binding.rs  config.rs  device.rs
crates/openlogi-gui/: Cargo.toml
crates/openlogi-gui/locales/: app.yml  da.yml  de.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  it.yml  ja.yml  ko.yml  nb.yml  nl.yml  pl.yml  pt-BR.yml  pt-PT.yml  ru.yml  sv.yml  zh-CN.yml  zh-HK.yml  zh-TW.yml
crates/openlogi-gui/src/: accessibility_watcher.rs  app.rs  hardware.rs  i18n.rs  inventory_watcher.rs  ipc_client.rs  launch_agent.rs  main.rs  state.rs
crates/openlogi-gui/src/asset/: glow.rs  index.rs  metadata.rs  mod.rs  sync.rs
crates/openlogi-gui/src/components/: dpi_panel.rs  lighting_panel.rs  mod.rs  smartshift_panel.rs
crates/openlogi-gui/src/data/: mouse_buttons.rs
crates/openlogi-gui/src/mouse_model/: leader_lines.rs  mod.rs  picker.rs  view.rs
crates/openlogi-gui/src/platform/: permissions.rs  status_item.rs  tray.rs
crates/openlogi-gui/src/state/: devices.rs
crates/openlogi-gui/src/watchers/: inventory.rs
crates/openlogi-gui/src/windows/: about.rs  settings.rs
crates/openlogi-hid/: Cargo.toml
crates/openlogi-hid/src/: inventory.rs  lib.rs  smartshift.rs  transport.rs  write.rs
crates/openlogi-hidpp/: Cargo.toml
crates/openlogi-hidpp/src/: channel.rs
crates/openlogi-hidpp/src/feature/: mod.rs  root.rs
crates/openlogi-hidpp/src/feature/adjustable_dpi/: mod.rs
crates/openlogi-hidpp/src/feature/device_friendly_name/: mod.rs
crates/openlogi-hidpp/src/feature/device_information/: mod.rs
crates/openlogi-hidpp/src/feature/device_type_and_name/: mod.rs
crates/openlogi-hidpp/src/feature/feature_set/: mod.rs
crates/openlogi-hidpp/src/feature/hires_wheel/: mod.rs
crates/openlogi-hidpp/src/feature/smartshift/: mod.rs
crates/openlogi-hidpp/src/feature/thumbwheel/: mod.rs
crates/openlogi-hidpp/src/feature/unified_battery/: mod.rs
crates/openlogi-hidpp/src/feature/wireless_device_status/: mod.rs
crates/openlogi-hook/: Cargo.toml
crates/openlogi-hook/examples/: frontmost_app.rs
crates/openlogi-hook/src/: lib.rs  linux.rs  windows.rs
docs/: DEVELOPMENT.md  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md  SECURITY.md
scripts/: cargo-run-macos.sh
