[package]
name = "openlogi-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GPUI-based desktop UI for OpenLogi."

[[bin]]
name = "openlogi-gui"
path = "src/main.rs"

[dependencies]
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
# GPU-accelerated UI framework and its component library.
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
# Tokio runs the one-shot HID enumeration before the GPUI app starts.
tokio = { workspace = true }
# Single error sink for the binary; libraries use thiserror.
anyhow = { workspace = true }
# Structured logging.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Asset registry + per-device metadata are JSON on disk.
serde = { workspace = true }
serde_json = { workspace = true }
# Per-user cache directory resolution (mirrors openlogi-core/paths.rs).
directories = { workspace = true }

[lints]
workspace = true
