[package]
name = "openlogi-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GPUI-based desktop UI for OpenLogi."

[[bin]]
name = "openlogi-gui"
path = "src/main.rs"

[dependencies]
openlogi-core = { path = "../openlogi-core" }
openlogi-hid = { path = "../openlogi-hid" }
openlogi-hook = { path = "../openlogi-hook" }
# Shared asset schema + HTTP fetch + sha verification. Re-exports ureq /
# sha2 transitively so we don't list them again.
openlogi-assets = { path = "../openlogi-assets" }
# GPU-accelerated UI framework and its component library.
gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
# Tokio runs the one-shot HID enumeration before the GPUI app starts.
tokio = { workspace = true }
# Single error sink for the binary; libraries use thiserror.
anyhow = { workspace = true }
# Structured logging.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Per-user cache directory resolution (mirrors openlogi-core/paths.rs).
directories = { workspace = true }
fs4 = { version = "1.1.0", features = ["sync"] }
thiserror.workspace = true
ureq.workspace = true

[lints]
workspace = true

# cargo-bundle config. By default the .app ships WITHOUT device renders —
# the app fetches only the connected device's render on first launch
# (on-demand) into its per-user cache, keeping the bundle small. The
# `resources` glob bundles whatever is in `assets/` at bundle time, so the
# packaging scripts leave it empty for the default build and populate it
# (via `assets sync`) only for an opt-in offline build
# (OPENLOGI_BUNDLE_ASSETS=1).
[package.metadata.bundle]
name = "OpenLogi"
identifier = "org.openlogi.OpenLogi"
version = "0.0.1"
category = "public.app-category.utilities"
short_description = "Lightweight local-first companion for Logitech HID++ peripherals."
long_description = """\
OpenLogi talks to Logitech HID++ mice and keyboards directly — no \
cloud account, no telemetry, no auto-update poller. Plain TOML config, \
single binary; device renders are fetched on demand on first launch.
"""
osx_minimum_system_version = "13.0"
# App icon. cargo-bundle copies a provided `.icns` verbatim, so we hand it
# the one generated from design/icon/openlogi.svg by scripts/macos-icns.sh.
# Like `resources`, this path is resolved against cargo-bundle's process cwd
# (the crate dir), and the .icns is git-ignored (regenerated on build).
icon = ["icon/AppIcon.icns"]
# Glob resolved by cargo-bundle's process cwd, NOT the manifest dir
# (cargo-bundle 0.10 has no chdir built in). Run from this crate's
# directory so the relative path lines up with Resources/assets/:
#
#     cd crates/openlogi-gui && cargo bundle --release
#
# The devenv `openlogi:bundle` / `openlogi:dmg` tasks wrap that; the latter
# also generates the icon and produces a DMG (scripts/package-macos.sh).
resources = ["assets/**/*"]
